# marine-omics-methods

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: deploy_docs.yaml  test_deploy.yml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/_static/: custom.css
momics/: __init__.py  constants.py  diversity.py  helpers.py  metadata.py  panel_utils.py  plotting.py  taxonomy.py  utils.py
momics/galaxy/: __init__.py  bio_blend.py  blue_cloud.py  gecco.py
momics/loader/: __init__.py  load_parquets.py  metadata.py  ro_crates.py
momics/test/: fixtures.py  test_diversity.py  test_galaxy.py  test_loader.py  test_panel_utils.py  test_plotting.py  test_taxonomy.py  test_utils.py
