[project]
name = "momics"
version = "0.0.1"
license = { file = "LICENSE.txt" }
description = "Utilities for metagoflow and marine omics"
maintainers = [
    { name = "FAIR-Ease", email = "dpalecek@ualg.pt" },
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.23.5",
    "pandas>=1.4.0",
    "requests>=2.26.0",
    "seaborn>=0.11.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
]
doc = [
    "sphinx>=5.0.0,<8.0.0",
    "matplotlib>=3.5",
]