[project]
name = "momics"
version = "0.0.1"
license = { file = "LICENSE.txt" }
description = "Utilities for metagoflow and marine omics"
maintainers = [
    { name = "FAIR-Ease", email = "dpalecek@ualg.pt" },
]
requires-python = ">=3.10"
dependencies = [
    "bioblend>=1.4.0",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.5",
    "numpy>=1.23.5",
    "pandas>=1.2.0",
    "panel>=1.6.0",
    "psutil>=5.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.26.0",
    "scikit-bio>=0.6.3",
    "seaborn>=0.11.2",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "tox",
]
doc = [
    "sphinx>=5.0.0,<9.0.0",
    "sphinx-autoapi>=1.9.0",
    "pydata-sphinx-theme",
    "matplotlib>=3.5",
]